karl package Changelog
======================

Unreleased
----------

- Fixed bug in mailin2 script that caused ZEO connections to be left open if
  there was a configuration error.

- Fixed bug in entity conversion where numeric entities were not converted.

3.38 (2010-07-09)
-----------------

- removed extra div#footer, so there are not multiple ids (LP #602889)

- LP #602888: Change titles on some People reports.

- LP #601109: Remove code and template for sending email after changing
  password.

- LP #566594: Help text for imagedrawer.

- slightly reduce margin on #right to prevent layout from
  breaking when font size is changed (LP #602837)

- Fix handling  of 'website' in admin CSV user upload. (LP #602473)

- tempfolder:  suppress sending events on add / remove, and therefore
  any catalog activity for objects in the temporary location. (LP #592697)


3.37 (2010-07-06)
-----------------

- further cleaning up of portlet styles to make them all the same (LP #599522)

  - set up related tags portlet and its .rightcol space to be styled like the
    other portlets in the site.

  - removed now unused CSS code.

  - gave .rightcol a left margin to put space between the portlet and text

  - reduced space above and below portlet title

- cico people import:  fixed the fix for singular 'website' element
  transform (LP #601205).

- tagging engine:  optimized 'getFrequency' (LP #597838).

- upload users view:  don't pass 'groups' to profile factory (LP #598246).

- portlet styles - cleaned up CSS for status message,
  applied new styles to profile tags portlet (LP #599522)

- general cleaning up of themedstyles.css for legibility

  - conformed way the code is laid out

  - fixed small errors

- Styled the site announcement to look like a status message. (LP #600765)

- Updated mailin code to respect X-Postoffice-Rejected headers coming from
  repoze.postoffice and special cased the bounce message when a message is